@@ -1,4 +1,5 @@
 + Added c65 as a new experimental target as -t65, suggested by Detlef Hastik.
++ Improve help messages for available targets. Patch by Dirk Jagdmann.
 + Added -y to add assembly fragment at the end of the sys line for the purpose
   of adding a short text using the .BYTE() and/or .TEXT() assembler directive.
   (This fragment will not be run as code).
